[package]
name = "mtg_color"
version = "1.0.0"
edition = "2021"
authors = ["SymmetricChaos <ajfraebel@gmail.com>"]
description = "Storage optimized colors for Magic the Gathering"
license = "MIT"
repository = "https://github.com/SymmetricChaos/mtg_color"
keywords = ["ntg","magic","no-std"]

[dependencies]
