[package]
name = "mtg_color"
version = "1.1.0"
edition = "2021"
authors = ["SymmetricChaos <ajfraebel@gmail.com>"]
description = "Storage optimized color information for Magic the Gathering"
license = "MIT"
repository = "https://github.com/SymmetricChaos/mtg_color"
keywords = ["mtg","magic","no-std"]

[dependencies]
